# splinosaurus

./: .gitignore  Cargo.toml  README.md  a.stl
examples/: b_spline.rs  b_surface.rs
src/: algorithms.rs  control_points.rs  control_vec.rs  export.rs  grid.rs  knots.rs  lib.rs  splines.rs  step_iter.rs  surfaces.rs  types.rs
src/control_points/: control_grid.rs  control_vec.rs  grid.rs
src/export/: bounding_box.rs  triangulation.rs
src/splines/: algorithms.rs  b_spline.rs  knot_vec.rs  nurbs.rs
src/surfaces/: b_surface.rs  nurbs.rs  t_spline.rs
