[package]
name = "splinosaurus"
version = "0.1.0"
edition = "2021"
description = "flexible spline and surface library"
license = "GPL-3.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"
az = "1.2"

[dev-dependencies]
pixel-canvas = "0.2"
fixed = "1.24"
stl_io = "0.7"
