[package]
name = "splinosaurus"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/DSchroer/splinosaurus/"
description = "flexible spline and surface library"
license = "GPL-3.0"
categories = ["mathematics", "science", "no-std"]

[dependencies]
nalgebra = "0.32"
az = "1.2"

[dev-dependencies]
pixel-canvas = "0.2"
fixed = "1.24"
stl_io = "0.7"
